Comment out social media links

--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,11 @@ sass:
 disqus_shortname:   default
 
 # Social
-analytics-id:       "default"
-twitter:            default
-facebook:           default
-instagram:          default
-github:             default
+# analytics-id:       "default"
+# twitter:            default
+# facebook:           default
+# instagram:          default
+# github:             default
 
 # personal
 location:           Los Angeles, CA
